# GroupChatTuringTest

./: README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/adrians/groupchatturing/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/adrians/groupchatturing/: ChatComposables.kt  LobbyComposables.kt  MainActivity.kt  MainViewModel.kt  MenuComposables.kt  Repository.kt  SummaryComposables.kt  UtilityComsposables.kt  WebSocketManager.kt
android/app/src/main/java/com/adrians/groupchatturing/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/app/src/test/java/com/adrians/groupchatturing/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/adrians/groupchatturing/: ChatComposables.kt  LobbyComposables.kt  MainActivity.kt  MainViewModel.kt  MenuComposables.kt  Repository.kt  SummaryComposables.kt  WebSocketManager.kt
app/src/main/res/xml/: network_security_config.xml
gradle/wrapper/: gradle-wrapper.properties
server/: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  buildDebug.sh  docker-compose.yml
server/data/: nickname_color.csv  topics.txt
server/doc/: Communication_Protocol.md
server/lib/uSockets/: CMakeLists.txt
server/lib/uWebSockets/: CMakeLists.txt
server/src/: main.cpp
server/src/Lobby/: Lobby.cpp  Lobby.hpp
server/src/MsgTypeEnum/: MsgTypeEnum.hpp
server/src/PerSocketData/: PerSocketData.hpp
server/src/ServerLogic/: MessageHandlers.cpp  ServerLogic.cpp  ServerLogic.hpp
server/src/UniqueIdGenerator/: UniqueIdGenerator.cpp  UniqueIdGenerator.hpp
server/test/: lobby_creator.js  lobby_user.js
